# serializer version: 1
# name: TestUsersProfilePasswordChange.test_invalid_current_password
  dict({
    'code': 'users.invalid_current_password',
    'message': 'Current password is incorrect',
    'success': False,
  })
# ---
# name: TestUsersProfilePasswordChange.test_invalid_new_password_no_digit
  dict({
    'code': 'pydantic.validation_error',
    'errors': dict({
      'new_password': list([
        'Value error, Password must contain at least one number',
      ]),
    }),
    'message': 'new_password: Value error, Password must contain at least one number',
    'success': False,
  })
# ---
# name: TestUsersProfilePasswordChange.test_invalid_new_password_no_lowercase
  dict({
    'code': 'pydantic.validation_error',
    'errors': dict({
      'new_password': list([
        'Value error, Password must contain at least one lowercase letter',
      ]),
    }),
    'message': 'new_password: Value error, Password must contain at least one lowercase letter',
    'success': False,
  })
# ---
# name: TestUsersProfilePasswordChange.test_invalid_new_password_no_uppercase
  dict({
    'code': 'pydantic.validation_error',
    'errors': dict({
      'new_password': list([
        'Value error, Password must contain at least one uppercase letter',
      ]),
    }),
    'message': 'new_password: Value error, Password must contain at least one uppercase letter',
    'success': False,
  })
# ---
# name: TestUsersProfilePasswordChange.test_invalid_new_password_too_short
  dict({
    'code': 'pydantic.validation_error',
    'errors': dict({
      'new_password': list([
        'Value error, Password must be at least 8 characters long',
      ]),
    }),
    'message': 'new_password: Value error, Password must be at least 8 characters long',
    'success': False,
  })
# ---
# name: TestUsersProfilePasswordChange.test_missing_current_password
  dict({
    'code': 'pydantic.validation_error',
    'errors': dict({
      'current_password': list([
        'Field required',
      ]),
    }),
    'message': 'current_password: Field required',
    'success': False,
  })
# ---
# name: TestUsersProfilePasswordChange.test_missing_new_password
  dict({
    'code': 'pydantic.validation_error',
    'errors': dict({
      'new_password': list([
        'Field required',
      ]),
    }),
    'message': 'new_password: Field required',
    'success': False,
  })
# ---
# name: TestUsersProfilePasswordChange.test_same_passwords
  dict({
    'message': 'Password changed',
    'success': True,
  })
# ---
# name: TestUsersProfilePasswordChange.test_success
  dict({
    'message': 'Password changed',
    'success': True,
  })
# ---
# name: TestUsersProfilePasswordChange.test_unauthorized
  dict({
    'code': 'drf.not_authenticated',
    'message': 'Authentication credentials were not provided.',
    'success': False,
  })
# ---
# name: TestUsersProfilePasswordChange.test_user_deleted
  dict({
    'code': 'drf.not_authenticated',
    'message': 'Authentication credentials were not provided.',
    'success': False,
  })
# ---
